clean up code to be useable my the model

--- a/src/Movie_Review_Sentiment_Analysis.ipynb
+++ b/src/Movie_Review_Sentiment_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "4d3a497d-8c0c-48eb-9ea4-9c4d9152dec6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "721a8cf6-b981-4524-8e3d-b4d43e890dd3",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "9031a0b9-d8d4-4e10-88e2-97151299a3fb",
    "metadata": {},
    "outputs": [],
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "8feab57b-d382-470e-8f65-9d573c641cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"IMDB Dataset.csv\")"
+    "df = pd.read_csv(\"../input/IMDB Dataset.csv\")"
    ]
   },
   {
@@ -371,155 +371,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "dedbd450-7fc3-4000-ae25-6947ae3f770b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"cleanseDAta.csv\");"
+    "df.to_csv(\"../input/cleanseDAta.csv\");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "919abee0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Run svm against the data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "id": "59fd1b57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### grab the first 70% of data to use as training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "237142a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "percentToTrain = 70\n",
-    "trainingData = df.head(int(len(df)*(percentToTrain/100)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "0819f94d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        one reviewer mention watch oz episode hook rig...\n",
-       "1        wonderful little production film technique una...\n",
-       "2        think wonderful way spend time hot summer week...\n",
-       "3        basically family little boy jake think zombie ...\n",
-       "4        petter mattei love time money visually stunnin...\n",
-       "                               ...                        \n",
-       "49995    think movie right good job creative original f...\n",
-       "49996    bad plot bad dialogue bad act idiotic direct a...\n",
-       "49997    catholic teach parochial elementary school nun...\n",
-       "49998    go disagree previous comment side maltin one s...\n",
-       "49999    one expect star trek movie high art fan expect...\n",
-       "Name: review, Length: 50000, dtype: object"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "percentToTest = 100 - percentToTrain\n",
-    "testData = df.tail(int(len(df) * (percentToTest/100)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "d797cb6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Vectorize the data ( here we can do a lot of different ways we will do a default way for now)\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "Tfidf_vect = TfidfVectorizer(max_features=5000)\n",
-    "Tfidf_vect.fit(df.review)\n",
-    "Train_X_Tfidf  = Tfidf_vect.transform(trainingData.review)\n",
-    "Test_X_Tfidf = Tfidf_vect.transform(testData.review)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "536f0810",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### run svm against the data\n",
-    "from sklearn import svm\n",
-    "SVM = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')\n",
-    "SVM.fit(Train_X_Tfidf,trainingData.sentiment);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "3b475fbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'accuracy_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [64], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m predictions_SVM \u001b[38;5;241m=\u001b[39m SVM\u001b[38;5;241m.\u001b[39mpredict(Test_X_Tfidf)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Use accuracy_score function to get the accuracy\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM Accuracy Score -> \u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[43maccuracy_score\u001b[49m(predictions_SVM, testData\u001b[38;5;241m.\u001b[39msentiment)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "predictions_SVM = SVM.predict(Test_X_Tfidf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "00bcfbca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM Accuracy Score ->  88.36666666666667\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "print(\"SVM Accuracy Score -> \",accuracy_score(predictions_SVM, testData.sentiment)*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79e6a850",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
