--- a/src/framework.ipynb
+++ b/src/framework.ipynb
@@ -2,33 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy import sparse\n",
-    "from collections import defaultdict\n",
-    "from classify import experiment_train_test"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load example data\n",
-    "input_path = \"../input/\"\n",
-    "X_train = sparse.load_npz(input_path+\"train_phi.npz\")\n",
-    "X_test = sparse.load_npz(input_path+\"test_phi.npz\")\n",
-    "y_train = np.load(input_path+\"train_label.npy\")\n",
-    "y_test = np.load(input_path+\"test_label.npy\")"
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "from classify import experiment_train_test\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load example data\n",
+    "df = pd.read_csv(\"../input/cleanseDAta.csv\")\n",
+    "\n",
+    "input_path = \"../input/\"\n",
+    "percentToTrain = 70\n",
+    "trainingData = df.head(int(len(df)*(percentToTrain/100)))\n",
+    "\n",
+    "percentToTest = 100 - percentToTrain\n",
+    "testData = df.tail(int(len(df) * (percentToTest/100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Vectorize the data ( here we can do a lot of different ways we will do a default way for now)\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "Tfidf_vect = TfidfVectorizer(max_features=5000)\n",
+    "Tfidf_vect.fit(df.review)\n",
+    "X_train  = Tfidf_vect.transform(trainingData.review)\n",
+    "X_test = Tfidf_vect.transform(testData.review)\n",
+    "y_train=trainingData.sentiment\n",
+    "y_test=testData.sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -38,32 +57,32 @@
       "MultinomialNB()\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.766     0.924     0.838      3681\n",
-      "           1      0.908     0.726     0.807      3790\n",
+      "    negative      0.852     0.850     0.851      7490\n",
+      "    positive      0.851     0.853     0.852      7510\n",
       "\n",
-      "    accuracy                          0.824      7471\n",
-      "   macro avg      0.837     0.825     0.823      7471\n",
-      "weighted avg      0.838     0.824     0.822      7471\n",
+      "    accuracy                          0.851     15000\n",
+      "   macro avg      0.851     0.851     0.851     15000\n",
+      "weighted avg      0.851     0.851     0.851     15000\n",
       "\n",
       "LinearSVC()\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.887     0.878     0.882      3681\n",
-      "           1      0.882     0.892     0.887      3790\n",
+      "    negative      0.887     0.882     0.885      7490\n",
+      "    positive      0.883     0.888     0.886      7510\n",
       "\n",
-      "    accuracy                          0.885      7471\n",
-      "   macro avg      0.885     0.885     0.885      7471\n",
-      "weighted avg      0.885     0.885     0.885      7471\n",
+      "    accuracy                          0.885     15000\n",
+      "   macro avg      0.885     0.885     0.885     15000\n",
+      "weighted avg      0.885     0.885     0.885     15000\n",
       "\n",
       "LogisticRegression(solver='liblinear')\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0      0.855     0.839     0.847      3681\n",
-      "           1      0.847     0.862     0.854      3790\n",
+      "    negative      0.894     0.885     0.889      7490\n",
+      "    positive      0.886     0.895     0.890      7510\n",
       "\n",
-      "    accuracy                          0.851      7471\n",
-      "   macro avg      0.851     0.851     0.851      7471\n",
-      "weighted avg      0.851     0.851     0.851      7471\n",
+      "    accuracy                          0.890     15000\n",
+      "   macro avg      0.890     0.890     0.890     15000\n",
+      "weighted avg      0.890     0.890     0.890     15000\n",
       "\n"
      ]
     }
@@ -91,9 +110,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nb:\t0.823\n",
+      "nb:\t0.851\n",
       "svm:\t0.885\n",
-      "lr:\t0.851\n"
+      "lr:\t0.890\n"
      ]
     }
    ],
@@ -102,11 +121,18 @@
     "for k,v in results.items():\n",
     "  print(f\"{k}:\\t{v['score']:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('3.7.6')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -120,9 +146,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8dc3eafe1b0ac348fa60c3f2fd57ab4c4183a188f28f3536c13d39268a6fd935"
