did some experiments with similar words concept

--- a/src/framework.ipynb
+++ b/src/framework.ipynb
@@ -58,17 +58,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #trying the Bag-of-Words approach\n",
-    "# from sklearn.feature_extraction.text import CountVectorizer\n",
+    "#trying the Bag-of-Words approach\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "# cv = CountVectorizer()\n",
-    "# cv.fit(df.review)\n",
+    "cv = CountVectorizer()\n",
+    "cv.fit(df.review)\n",
     "\n",
-    "# X_train = cv.transform(trainingData.review)\n",
-    "# X_test = cv.transform(testData.review)\n",
+    "X_train = cv.transform(trainingData.review)\n",
+    "X_test = cv.transform(testData.review)\n",
     "\n",
-    "# y_train = trainingData.sentiment\n",
-    "# y_test = testData.sentiment"
+    "y_train = trainingData.sentiment\n",
+    "y_test = testData.sentiment"
    ]
   },
   {
@@ -77,22 +77,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#trying Hash vecotrizer approach\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "# #trying Hash vecotrizer approach\n",
+    "# from sklearn.feature_extraction.text import HashingVectorizer\n",
     "\n",
-    "hv = HashingVectorizer(alternate_sign = False)\n",
-    "hv.fit(df.review)\n",
+    "# hv = HashingVectorizer(alternate_sign = False)\n",
+    "# hv.fit(df.review)\n",
     "\n",
-    "X_train = hv.transform(trainingData.review)\n",
-    "X_test = hv.transform(testData.review)\n",
+    "# X_train = hv.transform(trainingData.review)\n",
+    "# X_test = hv.transform(testData.review)\n",
     "\n",
-    "y_train = trainingData.sentiment\n",
-    "y_test = testData.sentiment"
+    "# y_train = trainingData.sentiment\n",
+    "# y_test = testData.sentiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,32 +102,32 @@
       "MultinomialNB()\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.804     0.798     0.801      7490\n",
-      "    positive      0.800     0.806     0.803      7510\n",
+      "    negative      0.834     0.823     0.829      7490\n",
+      "    positive      0.826     0.837     0.831      7510\n",
       "\n",
-      "    accuracy                          0.802     15000\n",
-      "   macro avg      0.802     0.802     0.802     15000\n",
-      "weighted avg      0.802     0.802     0.802     15000\n",
+      "    accuracy                          0.830     15000\n",
+      "   macro avg      0.830     0.830     0.830     15000\n",
+      "weighted avg      0.830     0.830     0.830     15000\n",
       "\n",
       "LinearSVC()\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.803     0.786     0.795      7490\n",
-      "    positive      0.791     0.808     0.799      7510\n",
+      "    negative      0.824     0.814     0.819      7490\n",
+      "    positive      0.817     0.827     0.822      7510\n",
       "\n",
-      "    accuracy                          0.797     15000\n",
-      "   macro avg      0.797     0.797     0.797     15000\n",
-      "weighted avg      0.797     0.797     0.797     15000\n",
+      "    accuracy                          0.820     15000\n",
+      "   macro avg      0.820     0.820     0.820     15000\n",
+      "weighted avg      0.820     0.820     0.820     15000\n",
       "\n",
       "LogisticRegression(solver='liblinear')\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative      0.802     0.774     0.788      7490\n",
-      "    positive      0.782     0.809     0.795      7510\n",
+      "    negative      0.832     0.820     0.826      7490\n",
+      "    positive      0.823     0.835     0.829      7510\n",
       "\n",
-      "    accuracy                          0.792     15000\n",
-      "   macro avg      0.792     0.792     0.792     15000\n",
-      "weighted avg      0.792     0.792     0.792     15000\n",
+      "    accuracy                          0.828     15000\n",
+      "   macro avg      0.828     0.828     0.828     15000\n",
+      "weighted avg      0.828     0.828     0.828     15000\n",
       "\n"
      ]
     },
@@ -136,20 +136,20 @@
       "text/plain": [
        "defaultdict(None,\n",
        "            {'nb': {'model': MultinomialNB(),\n",
-       "              'score': 0.8017947770721479,\n",
-       "              'predictions': array(['negative', 'positive', 'negative', ..., 'negative', 'positive',\n",
+       "              'score': 0.8299894789933577,\n",
+       "              'predictions': array(['positive', 'positive', 'negative', ..., 'negative', 'negative',\n",
        "                     'negative'], dtype='<U8')},\n",
        "             'svm': {'model': LinearSVC(),\n",
-       "              'score': 0.7970387247623921,\n",
-       "              'predictions': array(['negative', 'positive', 'negative', ..., 'negative', 'positive',\n",
+       "              'score': 0.8203899865421831,\n",
+       "              'predictions': array(['positive', 'positive', 'negative', ..., 'negative', 'negative',\n",
        "                     'negative'], dtype=object)},\n",
        "             'lr': {'model': LogisticRegression(solver='liblinear'),\n",
-       "              'score': 0.7915945667229702,\n",
-       "              'predictions': array(['negative', 'positive', 'negative', ..., 'negative', 'positive',\n",
+       "              'score': 0.8277199919695114,\n",
+       "              'predictions': array(['positive', 'positive', 'negative', ..., 'negative', 'negative',\n",
        "                     'negative'], dtype=object)}})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nb:\t0.802\n",
-      "svm:\t0.797\n",
-      "lr:\t0.792\n"
+      "nb:\t0.830\n",
+      "svm:\t0.820\n",
+      "lr:\t0.828\n"
      ]
     }
    ],
