--- a/src/word2vec_similarWords.ipynb
+++ b/src/word2vec_similarWords.ipynb
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "(4349551, 4983210)"
+       "(4349553, 4983210)"
       ]
      },
      "execution_count": 9,
@@ -234,32 +234,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "f1a893a9-a1d6-41f7-916c-b8e583f6365c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('potential', 0.7750345468521118),\n",
-       " ('cool', 0.773560643196106),\n",
-       " ('decent', 0.7646334171295166),\n",
-       " ('watchable', 0.7335750460624695),\n",
-       " ('nice', 0.7304697036743164),\n",
-       " ('awesome', 0.7295604944229126),\n",
-       " ('basically', 0.7284102439880371),\n",
-       " ('liked', 0.7259632349014282),\n",
-       " ('transvestite', 0.7224704623222351),\n",
-       " ('redo', 0.720148503780365)]"
+       "[('fantastic', 0.8400156497955322),\n",
+       " ('excellent', 0.8267327547073364),\n",
+       " ('perfect', 0.8245216012001038),\n",
+       " ('wonderful', 0.823573648929596),\n",
+       " ('underrated', 0.7466266751289368),\n",
+       " ('fine', 0.7433408498764038),\n",
+       " ('amaze', 0.7430500984191895),\n",
+       " ('outstanding', 0.7315570116043091),\n",
+       " ('brilliant', 0.719570517539978),\n",
+       " ('exclude', 0.7178438901901245)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.wv.similar_by_word(\"good\")"
+    "model.wv.similar_by_word(\"great\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2e6f1b92-6aaf-458d-98a8-b198f555600e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('amaze', 0.9435619115829468),\n",
+       " ('incredible', 0.9031370282173157),\n",
+       " ('greatest', 0.8590757846832275),\n",
+       " ('stand', 0.8541914820671082),\n",
+       " ('silliest', 0.8419725894927979),\n",
+       " ('fantastic', 0.8394713401794434),\n",
+       " ('pixar', 0.8389349579811096),\n",
+       " ('galaxina', 0.836421549320221),\n",
+       " ('underestimated', 0.8213001489639282),\n",
+       " ('hindi', 0.8207396864891052)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.similar_by_word(\"amazing\")"
    ]
   },
   {
@@ -271,16 +301,16 @@
     {
      "data": {
       "text/plain": [
-       "[('horrible', 0.87403404712677),\n",
-       " ('terrible', 0.8423776030540466),\n",
-       " ('awful', 0.8295862078666687),\n",
-       " ('crappy', 0.8288018107414246),\n",
-       " ('ridiculous', 0.8267092704772949),\n",
-       " ('worse', 0.8262853622436523),\n",
-       " ('stupid', 0.8057936429977417),\n",
-       " ('suck', 0.8006871342658997),\n",
-       " ('boring', 0.793814480304718),\n",
-       " ('worst', 0.792453944683075)]"
+       "[('horrible', 0.8696014881134033),\n",
+       " ('terrible', 0.8402481079101562),\n",
+       " ('awful', 0.8272355794906616),\n",
+       " ('crappy', 0.8262007832527161),\n",
+       " ('ridiculous', 0.8202272653579712),\n",
+       " ('worse', 0.8161944150924683),\n",
+       " ('stupid', 0.7998431921005249),\n",
+       " ('suck', 0.7898384928703308),\n",
+       " ('worst', 0.787878692150116),\n",
+       " ('boring', 0.7875757813453674)]"
       ]
      },
      "execution_count": 11,
@@ -294,6 +324,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "30351ca1-02e1-405b-ab58-9838e276b19a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('possibly', 0.9046772122383118),\n",
+       " ('doubt', 0.8665449023246765),\n",
+       " ('cheesiest', 0.8509103655815125),\n",
+       " ('traumatise', 0.8091619610786438),\n",
+       " ('dumbest', 0.7990915179252625),\n",
+       " ('fungicide', 0.7990517616271973),\n",
+       " ('greatest', 0.7944402098655701),\n",
+       " ('scariest', 0.7942544221878052),\n",
+       " ('funniest', 0.792280375957489),\n",
+       " ('worse', 0.7919859886169434)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.similar_by_word(\"worst\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "80f3f1ce-0cee-4e4c-a36c-ca67de8abfb6",
    "metadata": {},
@@ -301,16 +361,16 @@
     {
      "data": {
       "text/plain": [
-       "[('watchable', 0.9083331823348999),\n",
-       " ('standard', 0.8874742388725281),\n",
-       " ('fair', 0.8754882216453552),\n",
-       " ('mediocre', 0.8603795766830444),\n",
-       " ('campy', 0.8595117330551147),\n",
-       " ('extremely', 0.8574910163879395),\n",
-       " ('cheesy', 0.8492390513420105),\n",
-       " ('overall', 0.848595142364502),\n",
-       " ('decent', 0.8465703129768372),\n",
-       " ('rat', 0.8464301228523254)]"
+       "[('watchable', 0.9080445766448975),\n",
+       " ('standard', 0.8765836954116821),\n",
+       " ('fair', 0.8688828945159912),\n",
+       " ('mediocre', 0.8626630902290344),\n",
+       " ('campy', 0.8591241836547852),\n",
+       " ('extremely', 0.8581792712211609),\n",
+       " ('overall', 0.851992666721344),\n",
+       " ('disappointing', 0.8438284993171692),\n",
+       " ('level', 0.8432433605194092),\n",
+       " ('flaw', 0.8428188562393188)]"
       ]
      },
      "execution_count": 12,
